fix up text alignment for header

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -266,6 +266,11 @@ body {
     height: 100%;
 }
 
+.navbar-header a,
+.navbar-header span {
+  line-height: 32px;
+}
+
 #top-wrap {
     min-height: 100%;
     height: auto !important;
